cnwebsite/versioned_docs/version-0.55/view-style-props.md
---
id: version-0.55-view-style-props
title: View Style Props
original_id: view-style-props
---

### Props

* [`borderRightColor`](view-style-props.md#borderrightcolor)
* [`backfaceVisibility`](view-style-props.md#backfacevisibility)
* [`borderBottomColor`](view-style-props.md#borderbottomcolor)
* [`borderBottomEndRadius`](view-style-props.md#borderbottomendradius)
* [`borderBottomLeftRadius`](view-style-props.md#borderbottomleftradius)
* [`borderBottomRightRadius`](view-style-props.md#borderbottomrightradius)
* [`borderBottomStartRadius`](view-style-props.md#borderbottomstartradius)
* [`borderBottomWidth`](view-style-props.md#borderbottomwidth)
* [`borderColor`](view-style-props.md#bordercolor)
* [`borderEndColor`](view-style-props.md#borderendcolor)
* [`borderLeftColor`](view-style-props.md#borderleftcolor)
* [`borderLeftWidth`](view-style-props.md#borderleftwidth)
* [`borderRadius`](view-style-props.md#borderradius)
* [`backgroundColor`](view-style-props.md#backgroundcolor)
* [`borderRightWidth`](view-style-props.md#borderrightwidth)
* [`borderStartColor`](view-style-props.md#borderstartcolor)
* [`borderStyle`](view-style-props.md#borderstyle)
* [`borderTopColor`](view-style-props.md#bordertopcolor)
* [`borderTopEndRadius`](view-style-props.md#bordertopendradius)
* [`borderTopLeftRadius`](view-style-props.md#bordertopleftradius)
* [`borderTopRightRadius`](view-style-props.md#bordertoprightradius)
* [`borderTopStartRadius`](view-style-props.md#bordertopstartradius)
* [`borderTopWidth`](view-style-props.md#bordertopwidth)
* [`borderWidth`](view-style-props.md#borderwidth)
* [`opacity`](view-style-props.md#opacity)
* [`elevation`](view-style-props.md#elevation)

---

# 文档

## Props

### `borderRightColor`

| 类型               | 必填 |
| ------------------ | -------- |
| [color](colors.md) | 否       |

---

### `backfaceVisibility`

| 类型                      | 必填 |
| ------------------------- | -------- |
| enum('visible', 'hidden') | 否       |

---

### `borderBottomColor`

| 类型               | 必填 |
| ------------------ | -------- |
| [color](colors.md) | 否       |

---

### `borderBottomEndRadius`

| 类型   | 必填 |
| ------ | -------- |
| number | 否       |

---

### `borderBottomLeftRadius`

| 类型   | 必填 |
| ------ | -------- |
| number | 否       |

---

### `borderBottomRightRadius`

| 类型   | 必填 |
| ------ | -------- |
| number | 否       |

---

### `borderBottomStartRadius`

| 类型   | 必填 |
| ------ | -------- |
| number | 否       |

---

### `borderBottomWidth`

| 类型   | 必填 |
| ------ | -------- |
| number | 否       |

---

### `borderColor`

| 类型               | 必填 |
| ------------------ | -------- |
| [color](colors.md) | 否       |

---

### `borderEndColor`

| 类型               | 必填 |
| ------------------ | -------- |
| [color](colors.md) | 否       |

---

### `borderLeftColor`

| 类型               | 必填 |
| ------------------ | -------- |
| [color](colors.md) | 否       |

---

### `borderLeftWidth`

| 类型   | 必填 |
| ------ | -------- |
| number | 否       |

---

### `borderRadius`

| 类型   | 必填 |
| ------ | -------- |
| number | 否       |

---

### `backgroundColor`

| 类型               | 必填 |
| ------------------ | -------- |
| [color](colors.md) | 否       |

---

### `borderRightWidth`

| 类型   | 必填 |
| ------ | -------- |
| number | 否       |

---

### `borderStartColor`

| 类型               | 必填 |
| ------------------ | -------- |
| [color](colors.md) | 否       |

---

### `borderStyle`

| 类型                              | 必填 |
| --------------------------------- | -------- |
| enum('solid', 'dotted', 'dashed') | 否       |

---

### `borderTopColor`

| 类型               | 必填 |
| ------------------ | -------- |
| [color](colors.md) | 否       |

---

### `borderTopEndRadius`

| 类型   | 必填 |
| ------ | -------- |
| number | 否       |

---

### `borderTopLeftRadius`

| 类型   | 必填 |
| ------ | -------- |
| number | 否       |

---

### `borderTopRightRadius`

| 类型   | 必填 |
| ------ | -------- |
| number | 否       |

---

### `borderTopStartRadius`

| 类型   | 必填 |
| ------ | -------- |
| number | 否       |

---

### `borderTopWidth`

| 类型   | 必填 |
| ------ | -------- |
| number | 否       |

---

### `borderWidth`

| 类型   | 必填 |
| ------ | -------- |
| number | 否       |

---

### `opacity`

| 类型   | 必填 |
| ------ | -------- |
| number | 否       |

---

### `elevation`

(限Android)使用Android原生的 elevation API来设置视图的高度（ [elevation API](https://developer.android.com/training/material/shadows-clipping.html#Elevation)）。这样可以为视图添加一个投影，并且会影响视图层叠的顺序。此属性仅支持Android5.0及以上版本。

| 类型   | 必填 | 平台 |
| ------ | -------- | -------- |
| number | 否       | Android  |
